add dz-03-02 accardion

--- a/03-lection1/02-accordion/accordion.css
+++ b/03-lection1/02-accordion/accordion.css
@@ -1,1 +1,42 @@
 /* Стилизация аккордеона */
+.accordion * {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 24px;
+}
+.accordion__item {
+    width: 730px;
+    padding: 0px;
+    margin: 0px;
+    margin-bottom: 8px;
+    background-color: var(--white);
+    border: 1px solid var(--grey-3);
+    box-sizing: border-box;
+    border-radius: 8px;
+}
+.accordion__item:last-child {
+    margin-bottom: 0px;
+}
+.accordion__item__summary {
+    padding: 24px 32px 24px;
+    color: var(--black);
+}
+.accordion__item__summary::-webkit-details-marker {
+    display: none;
+}
+.accordion__item__content {
+    margin: 0px;
+    padding: 16px 32px 32px;
+    color: var(--grey-4);
+}
+details .accordion__item__summary {
+    list-style: none;
+}
+details[open] .accordion__item__summary {
+    padding-bottom: 0px;
+}
+details[open] .accordion__item__summary img {
+    transform: rotate(180deg);
+}
