--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22,3 +22,9 @@
 * {
     font-family: 'Roboto', sans-serif;
 }
+@font-face {
+    font-family: "Inter"; 
+    src: url("../fonts/Inter-V.ttf") format("truetype"); 
+    font-style: normal; 
+    font-weight: normal; 
+}
