--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,13 @@
 @import '../fonts/fonts.css';
 @import url(https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css);
 
+@import '../../components/footer/footer.css';
+@import '../../components/header/header.css';
+@import '../../components/preview/preview.css';
+@import '../../components/container/container.css';
+@import '../../components/card/card.css';
+@import '../../components/page/page.css';
+
 :root {
     --white: #ffffff;
     --black: #212429;
@@ -22,6 +29,7 @@
 
 body {
     font-family: 'Roboto', sans-serif;
+    background: #495057;
 }
 @font-face {
     font-family: "Inter"; 
@@ -29,3 +37,8 @@ body {
     font-style: normal; 
     font-weight: normal; 
 }
+
+html, body {
+    height: 100%;
+}
+
