--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,8 @@
 @import '../fonts/fonts.css';
 @import url(https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css);
+
+@import '../../03-lection1/01-button/button.css';
+
 :root {
     --white: #ffffff;
     --black: #212429;
