--- a/components/preview/preview.css
+++ b/components/preview/preview.css
@@ -3,11 +3,11 @@
     background-color: #F9FAFC;
 }
 .preview__inner {
-    display: flex;
-    justify-content: space-between;
-    gap: 30px;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    grid-gap: 30px;
+    
 }
-.preview__inner-card {
-    width: 33.3333%;/*calc(33.3333% - 30px);*/
-} 
+/*.preview__inner-card {
+    width: calc(33.3333% - 30px);
+}*/
