--- a/components/card/card.css
+++ b/components/card/card.css
@@ -1,7 +1,20 @@
 .card {
-    background: blue;
+    background: var(--white);
     box-shadow: 0px 2px 4px rgba(33, 36, 41, 0.05);
     border-radius: 12px;
     height: 367px;
-    /*flex-basis: 350px;*/
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 0 24px 30px;
+}
+.card__title {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 21px;
+    line-height: 25px;
+    color: var(--black);
+    margin: 0;
 }
