--- a/components/footer/footer.css
+++ b/components/footer/footer.css
@@ -1,4 +1,26 @@
 .footer {
-    height: 100px;
+    height: 384px;
     background-color: #fff;
+    font-family: 'Inter';
+    font-style: normal;
+    color: var(--black);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 71px 0 136px;
+}
+.footer__title {
+    font-weight: 500;
+    font-size: 38px;
+    line-height: 48px;
+    margin: 0;
+}
+.footer__text {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    text-align: center;
+    margin: 0;
+    margin-top: 32px;
+    max-width: 640px;
 }
