--- a/components/header/header.css
+++ b/components/header/header.css
@@ -1,7 +1,7 @@
 .header {
-    height: 100px;
+    height: 237px;
     background-color: #fff;
-    padding: 24px 0 40px;
+    padding: 96px 0 77px;
 }
 .header__title {
     font-family: 'Inter';
@@ -10,4 +10,5 @@
     font-size: 50px;
     line-height: 64px;
     color: #212429;
+    margin: 0;
 }
