--- a/components/preview/preview.css
+++ b/components/preview/preview.css
@@ -1,13 +1,9 @@
 .preview {
-    /*min-height: 400px;*/
     background-color: #F9FAFC;
+    padding: 68px 0 204px;
 }
 .preview__inner {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
     grid-gap: 30px;
-    
 }
-/*.preview__inner-card {
-    width: calc(33.3333% - 30px);
-}*/
