add Page of component

--- a/components/footer/footer.css
+++ b/components/footer/footer.css
@@ -6,20 +6,50 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 71px 0 136px;
+    padding: 4.44rem 0 8.5rem;
 }
 .footer__title {
     font-weight: 500;
-    font-size: 38px;
-    line-height: 48px;
+    font-size: 2.34rem;
+    line-height: 3rem;
     margin: 0;
 }
 .footer__text {
     font-weight: 400;
-    font-size: 16px;
-    line-height: 24px;
+    font-size: 1rem;
+    line-height: 1.5rem;
     text-align: center;
     margin: 0;
-    margin-top: 32px;
-    max-width: 640px;
+    margin-top: 2rem;
+    max-width: 40rem;
+}
+.footer_component {
+    display: none;
+    /*background-color: transparent;
+    padding: 2rem 0 3.5rem;*/
+}
+/*.footer__text-component {
+    font-weight: 500;
+    font-size: 0.75rem;
+    line-height: 1.13rem;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    color: var(--grey-3);
+    margin: 0;
+}*/
+@media screen and (min-width: 768px) {
+    .footer_component {
+        display: flex;
+        background-color: transparent;
+        padding: 2rem 0 3.5rem;
+    }
+    .footer__text-component {
+        font-weight: 500;
+        font-size: 0.75rem;
+        line-height: 1.13rem;
+        letter-spacing: 0.04em;
+        text-transform: uppercase;
+        color: var(--grey-3);
+        margin: 0;
+    }
 }
