--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,6 +8,7 @@
 @import '../../components/card/card.css';
 @import '../../components/page/page.css';
 @import '../../03-lection1/01-button/button.css';
+@import '../../components/component/component.css';
 
 :root {
     --white: #ffffff;
