--- a/components/container/container.css
+++ b/components/container/container.css
@@ -1,4 +1,10 @@
 .container {
-    max-width: 1110px;
-    margin: 0 auto;
+    width: 100%;
+    height: 100%;
+}
+@media screen and (min-width: 768px) {
+    .container {
+        max-width: 69rem;
+        margin: 0 auto;
+    }
 }
