--- a/components/footer/footer.css
+++ b/components/footer/footer.css
@@ -23,27 +23,16 @@
     margin-top: 2rem;
     max-width: 40rem;
 }
-.footer_component {
+.footer_component_description {
     display: none;
-    /*background-color: transparent;
-    padding: 2rem 0 3.5rem;*/
 }
-/*.footer__text-component {
-    font-weight: 500;
-    font-size: 0.75rem;
-    line-height: 1.13rem;
-    letter-spacing: 0.04em;
-    text-transform: uppercase;
-    color: var(--grey-3);
-    margin: 0;
-}*/
 @media screen and (min-width: 768px) {
-    .footer_component {
+    .footer_component_description {
         display: flex;
         background-color: transparent;
         padding: 2rem 0 3.5rem;
     }
-    .footer__text-component {
+    .footer__text_component_description {
         font-weight: 500;
         font-size: 0.75rem;
         line-height: 1.13rem;
