add Page of component

--- a/components/component/component.css
+++ b/components/component/component.css
@@ -1,16 +1,17 @@
 .component-page {
     padding: 0;
+    box-sizing: border-box;
 }
 .component-page__inner {
     height: 100%;
 }
-.component__wrapper {
+.component-page__wrapper {
     background-color: var(--white);
     height: 100%;
     padding-top: 2rem;
     box-sizing: border-box;
 }
-.component__menu{
+.component-page__menu{
     display: none;
 }
 @media screen and (min-width: 768px) {
@@ -23,7 +24,7 @@
         grid-template-columns: auto 1fr;
         grid-column-gap: 3.5rem;
     }
-    .component__menu {
+    .component-page__menu {
         display: block;
         width: 14rem;
     }
