--- a/06-lection4/01-avatar/avatar.css
+++ b/06-lection4/01-avatar/avatar.css
@@ -1,21 +1,11 @@
 .avatar {
-    position: relative;
-    width: 100%;
-    padding-bottom: 100%;
-}
-.avatar__circle {
-    border-radius: 50%;
-    position: absolute;
-    top: 0rem;
-    left: 0rem;
-    right: 0rem;
-    bottom: 0rem;
-    overflow: hidden;
     width: 100%;
     height: 100%;
+    border-radius: 50%;
+    overflow: hidden;
 }
 .avatar__image {
     width: 100%;
-    height: auto;
+    height: 100%;
     object-fit: cover;
 }
