--- a/03-lection1/02-accordion/accordion.css
+++ b/03-lection1/02-accordion/accordion.css
@@ -3,38 +3,48 @@
     font-family: 'Inter', sans-serif;
     font-style: normal;
     font-weight: normal;
-    font-size: 16px;
-    line-height: 24px;
+    font-size: 1rem;
+    line-height: 1.5rem;
 }
 .accordion__item {
-    max-width: 730px;
-    padding: 0px;
-    margin: 0px;
-    margin-bottom: 8px;
+    max-width: 46rem;
+    padding: 0;
+    margin: 0;
+    margin-bottom: 0.5rem;
     background-color: var(--white);
-    border: 1px solid var(--grey-3);
+    border: 0.06rem solid var(--grey-3);
     box-sizing: border-box;
-    border-radius: 8px;
+    border-radius: 0.5rem;
 }
 .accordion__item:last-child {
-    margin-bottom: 0px;
+    margin-bottom: 0;
 }
 .accordion__summary {
-    padding: 24px 32px 24px;
+    padding: 1.5rem 2rem 1.5rem;
     color: var(--black);
     list-style: none;
+    display: flex;
+    justify-content: space-between;
+}
+.accordion__title {
+    margin: 0;
+}
+.accordion__icon {
+    width: 1.5rem;
+    height: 1.5rem;
+    color: var(--grey-4);
 }
 .accordion__summary::-webkit-details-marker {
     display: none;
 }
 .accordion__content {
-    margin: 0px;
-    padding: 16px 32px 32px;
+    margin: 0;
+    padding: 1rem 2rem 2rem;
     color: var(--grey-4);
 }
 .accordion__details[open] .accordion__summary {
-    padding-bottom: 0px;
+    padding-bottom: 0;
 }
-.accordion__details[open] .accordion__arrow {
+.accordion__details[open] .accordion__icon {
     transform: rotate(180deg);
 }
