--- a/05-lection3/01-tooltip/tooltip.css
+++ b/05-lection3/01-tooltip/tooltip.css
@@ -4,32 +4,32 @@
 }
 .tooltip__icon {
     cursor: pointer;
-    width: 24px;
-    height: 24px;
+    width: 1.5rem;
+    height: 1.5rem;
 }
 .tooltip__bubble {
     display: none;
     background: var(--blue-1);
-    box-shadow: 0px 2px 4px rgba(33, 36, 41, 0.05);
-    border-radius: 10px;
-    padding: 13px 21px 8px;
+    box-shadow: 0 0.13rem 0.25rem rgba(33, 36, 41, 0.05);
+    border-radius: 0.65rem;
+    padding: 0.8rem 1.3rem 0.5rem;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
-    font-size: 16px;
-    line-height: 24px;
+    font-size: 1rem;
+    line-height: 1.5rem;
     text-align: center;
     white-space: nowrap;
     color: var(--grey-2);
     position: absolute;
-    bottom: calc(100% + 8px);
+    bottom: calc(100% + 0.5rem);
     left: 50%;
     transform: translateX(-50%);
 }
 .tooltip__bubble::after {
     content: "";
-    border: 7px solid transparent;
-    border-top: 6px solid var(--blue-1);
+    border: 0.4rem solid transparent;
+    border-top: 0.4rem solid var(--blue-1);
     position: absolute;
     top: 100%;
     left: 50%;
