--- a/05-lection3/02-modal/modal.css
+++ b/05-lection3/02-modal/modal.css
@@ -10,11 +10,11 @@
     transition: all 0.35s ease-out;
 }
 .modal__window {
-    max-width: 428px;
+    max-width: 27rem;
     background: var(--white);
     box-sizing: border-box;
-    border-radius: 8px;
-    padding: 15px 15px 33px 40px;
+    border-radius: 0.5rem;
+    padding: 1rem 1rem 2rem 2.5rem;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -25,26 +25,27 @@
     justify-content: space-between;
 }
 .modal__title {
-    padding-top: 15px;
+    padding-top: 1rem;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 600;
-    font-size: 20px;
-    line-height: 24px;
-    color: #334D6E;
+    font-size: 1.25rem;
+    line-height: 1.5rem;
+    color: var(--blue-2);
 }
 .modal__close {
-    width: 16px;
-    height: 16px;
+    width: 1.5rem;
+    height: 1.5rem;
+    color: var(--grey-4);
 }
 .modal__main {
-    padding-right: 25px;
-    padding-top: 15px;
+    padding-right: 1.5rem;
+    padding-top: 1rem;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
-    font-size: 16px;
-    line-height: 24px;
+    font-size: 1rem;
+    line-height: 1.5rem;
     color: var(--grey-4);
 }
 .modal__text {
