--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -17,6 +17,7 @@
     --purple: #7048E8;
     --blue: #374FC7;
     --blue-1: #4263EB;
+    --blue-2: #334D6E;
     --red: #F03D3E;
     --grey-1: #F8F9FA;
     --grey-2: #DDE2E5;
@@ -32,7 +33,6 @@
 
 body {
     font-family: 'Roboto', sans-serif;
-    background: #495057;
 }
 @font-face {
     font-family: "Inter"; 
