--- a/06-lection4/01-avatar/avatar.css
+++ b/06-lection4/01-avatar/avatar.css
@@ -1,6 +1,6 @@
 .avatar {
-    width: 100%;
-    height: 100%;
+    width: 6.5rem;
+    height: 6.5rem;
     border-radius: 50%;
     overflow: hidden;
 }
