--- a/07-lection5/01-checkbox/checkbox.css
+++ b/07-lection5/01-checkbox/checkbox.css
@@ -48,6 +48,9 @@
 .checkbox__input:focus ~ .checkbox__state .checkbox__title {
     text-decoration: underline;
 }
+.checkbox__input:disabled ~ .checkbox__state {
+    cursor: default;
+}
 .checkbox__input:disabled ~ .checkbox__state .checkbox__control {
     background: var(--grey-2);
     border-color: var(--grey-2);
