--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,10 +9,12 @@
 @import '../../components/page/page.css';
 @import '../../03-lection1/01-button/button.css';
 @import '../../components/component/component.css';
+@import '../../components/tabs/tabs.css';
 
 :root {
     --white: #ffffff;
     --black: #212429;
+    --black-1: #495057;
     --pink: #F784AD;
     --purple: #7048E8;
     --blue: #374FC7;
