--- a/components/card/card.css
+++ b/components/card/card.css
@@ -1,20 +1,38 @@
 .card {
     background: var(--white);
-    box-shadow: 0px 2px 4px rgba(33, 36, 41, 0.05);
-    border-radius: 12px;
-    height: 367px;
+    box-shadow: 0px 0.125rem 0.25rem rgba(33, 36, 41, 0.05);
+    border-radius: 0.75rem;
+    box-sizing: border-box;
+    height: 14.5rem;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
     align-items: center;
-    padding: 0 24px 30px;
+    padding: 0 1.5rem 1.9rem;
 }
 .card__title {
     font-family: 'Roboto';
     font-style: normal;
-    font-weight: 500;
-    font-size: 21px;
-    line-height: 25px;
+    font-weight: 400;
+    font-size: 1rem;
+    line-height: 1.5rem;
     color: var(--black);
     margin: 0;
+    /*overflow: hidden;
+    text-overflow: ellipsis;*/
+    
+}
+@media screen and (min-width: 768px) {
+    .card {
+        height: 23rem;
+    }
+    .card__title {
+        font-family: 'Roboto';
+        font-style: normal;
+        font-weight: 500;
+        font-size: 1.3rem;
+        line-height: 1.6rem;
+        color: var(--black);
+        margin: 0;
+    }
 }
