--- a/components/container/container.css
+++ b/components/container/container.css
@@ -1,4 +1,10 @@
 .container {
     max-width: 69rem;
     margin: 0 auto;
+    padding: 0 1rem;
+}
+@media screen and (min-width: 1280px) {
+    .container {
+        padding: 0;
+    }
 }
