--- a/components/header/header.css
+++ b/components/header/header.css
@@ -24,12 +24,11 @@
     margin: 0;
 }
 .header_component_description {
-    background-color: transparent;
+    background-color: var(--grey-5);
     padding: 1rem 0 1rem;
 }
 @media screen and (min-width: 768px) {
     .header_component_description {
-        background-color: transparent;
         padding: 2rem 0 2rem;
     }
 }
