--- a/components/tabs/tabs.css
+++ b/components/tabs/tabs.css
@@ -44,6 +44,12 @@
 .tab__content_template {
     display: none;
 }
+.tab__content_html {
+    display: none;
+}
+.tab__content_css {
+    display: none;
+}
 #all-tab:checked ~ .tabs__scroller .tabs__label[for="all-tab"],
 #element-tab:checked ~ .tabs__scroller .tabs__label[for="element-tab"],
 #container-tab:checked ~ .tabs__scroller .tabs__label[for="container-tab"],
@@ -56,4 +62,18 @@
 #container-tab:checked ~ .tab__content_container,
 #template-tab:checked ~ .tab__content_template {
    display: block;
+}
+#html-tab:checked ~ .tabs__scroller .tabs__label[for="html-tab"],
+#css-tab:checked ~ .tabs__scroller .tabs__label[for="css-tab"] {
+    color: var(--black);
+    border-bottom: 0.3rem solid var(--black);
+}
+#html-tab:checked ~ .tab__content_html,
+#css-tab:checked ~ .tab__content_css {
+   display: block;
+}
+@media screen and (min-width: 768px) {
+    .tabs__scroller_component {
+        padding: 0 3rem;
+    }
 }
