--- a/07-lection5/03-toggler/toggler.css
+++ b/07-lection5/03-toggler/toggler.css
@@ -30,6 +30,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-100%, -50%);
+    transition: transform 200ms linear;
 }
 .toggle__title {
     font-family: 'Inter';
