--- a/07-lection5/04-input/input.css
+++ b/07-lection5/04-input/input.css
@@ -32,6 +32,7 @@
     font-size: 1.25rem;
     line-height: 1.6rem;
     color: var(--grey-4);
+    transition: border-color 200ms ease;
 }
 .form-group__icon {
     width: 1.5rem;
