--- a/04-lection2/02-skeleton/skeleton.css
+++ b/04-lection2/02-skeleton/skeleton.css
@@ -14,14 +14,22 @@
     width: 64px;
     height: 64px;
     border-radius: 50%;
-    background-color: var(--grey-2);
     flex-shrink: 0;
 }
 .skeleton__line {
     height: 20px;
     margin: 0px;
+}
+.skeleton_animation {
+    /*background: var(--grey-2);*/
     background: linear-gradient(92.51deg, #DDE2E5 6.44%, #E2E6E8 38.47%,
     #F3F5F5 56.48%, #E3E7EA 77.5%, #DDE2E5 102.52%);
+    background-size: 200%;
+    animation-name: backgroundMovement;
+    animation-duration: 1.5s;
+    animation-fill-mode: forwards;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
 }
 .skeleton__header-line {
     flex-grow: 1;
@@ -42,4 +50,13 @@
 }
 .skeleton__line_long:last-child {
     margin-bottom: 0px;
+}
+@keyframes backgroundMovement {
+    0% {
+        background-position: 100%;
+    }
+
+    100% {
+        background-position: -100%;
+    }
 }
