--- a/07-lection5/01-checkbox/checkbox.css
+++ b/07-lection5/01-checkbox/checkbox.css
@@ -41,6 +41,7 @@
 .checkbox__input:checked ~ .checkbox__state .checkbox__control {
     background: var(--blue-1);
     border-color: var(--blue-1);
+    animation: pulse 0.5s;
 }
 .checkbox__input:checked ~ .checkbox__state .checkbox__icon {
     color: var(--white);
@@ -57,4 +58,13 @@
 }
 .checkbox__input:disabled ~ .checkbox__state .checkbox__title {
     color: var(--grey-2);
+}
+
+@keyframes pulse {
+    0% {
+        box-shadow: 0 0 0 0 var(--grey-3);
+    }
+    100% {
+        box-shadow: 0 0 0 1.5rem rgba(172, 181, 189, 0);
+    }
 }
